--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,49 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 html, html body{
     overflow-x: hidden;
 }
-@font-face {
-    font-family: 'PPNeueMachina';
-    src: url('../fonts/neu/NeueMachina-Light.ttf') format('ttf');
-  }
 
-  
-  @font-face {
-    font-family: 'PPNeueMachina';
-    src: url('../fonts/neu/NeueMachina-Light.otf');
-    src: local('☺'),  
-         url('../fonts/neu/NeueMachina-Light.otf') format('truetype'), 
-  }
-  
-  @font-face {
-    font-family: 'PPNeueMachina';
-    src: url('../fonts/neu/NeueMachina-Light.otf');
-    src: local('☺'),  
-         url('../fonts/neu/NeueMachina-Light.otf') format('truetype'), 
-  }
-  
-  @font-face {
-    font-family: 'PPNeueMachina';
-    src: url('../fonts/neu/NeueMachina-Regular.otf');
-    src: local('☺'),  
-         url('../fonts/neu/NeueMachina-Regular.otf') format('truetype'), 
-  }
-  
-  @font-face {
-    font-family: 'PPNeueMachina';
-    src: url('../fonts/neu/NeueMachina-Ultrabold.otf');
-    src: local('☺'),  
-         url('../fonts/neu/NeueMachina-Ultrabold.otf') format('truetype'), 
+@font-face {
+    font-family: 'Satoshi-Variable';
+    src: url('../fonts/Satoshi-Variable.woff2') format('woff2'),
+        url('../fonts/Satoshi-Variable.woff') format('woff'),
+        url('../fonts/Satoshi-Variable.ttf') format('truetype');
+        font-weight: 300 900;
+        font-display: swap;
+        font-style: normal;
   }
   
   
 body {
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
+    font-family: 'Satoshi-Variable';
+    @include font-20;
     font-weight: 400;
     line-height: 1.6;
-    color: $text;
-    background-color: $t-black;
+    color: $_white;
+    background-color: $_141C24;
 }
 
 h1,
@@ -52,12 +28,24 @@ h3,
 h4,
 h5,
 h6 {
-    color: $heading;
     font-weight: 700;
-    font-family: 'PPNeueMachina', Arial, Helvetica, sans-serif;
 };
 
-
+h1{
+    @include font-120;
+}
+h2{
+    @include font-54;
+}
+h3{
+    @include font-40;
+}
+h4{
+    @include font-22;
+}
+h5{
+    @include font-20;
+}
 p {
     margin: 0;
 }
@@ -83,7 +71,6 @@ input,
 textarea,
 button {
     padding: 10px 25px;
-    border: 1px solid $heading;
     outline: none;
     @include transition;
 }
@@ -110,76 +97,56 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-input[type=number] {
-    -moz-appearance: textfield;
-}
+// input[type=number] {
+//     -moz-appearance: textfield;
+// }
 
 .container {
-    @include xxxl {
-        max-width: 1560px;
-    }
+    max-width: 1350px;
 }
 
-.base {
-    &-btn {
-        display: inline-block;
-        border: 1px solid $primary;
-        border-radius: 5px;
-        color: $t-black;
-        background-color: $primary;
-        padding: 11px 33px;
-        @include font-20;
-        @include sm {
-            font-size: 18px;
-        }
-        &:hover {
-            background-color: transparent;
-            color: $primary;
-        }
-        &.bg-transparent {
-            color: $primary;
-            &:hover {
-                background-color: $primary !important;
-                color: $t-black;
-            }
-        }
-    }
-    &-padding {
-        padding-top: 200px;
-        @include sm{
-            padding-top: 100px;
-        }
-    }
-    &-title {
-        margin-bottom: 60px;
-        & h2 {
-            @include font-70;
-            margin-bottom: 26px;
-            position: relative;
-            display: inline-block;
-            z-index: 1;
-        }
-        & p {
-            @include font-18;
-        }
-    }
-}
-
-.-mb {
-    &-30 {
-        margin-bottom: -30px;
-    }
-}
-
-.seemore {
-    margin-top: 60px;
+.boxed__btn, .inline__btn {
+    display: inline-block;
+    border: 1.5px solid transparent;
+    border-radius: 40px;
+    color: $_white;
+    background: $_0F1919;
+    backdrop-filter: blur(27px);
+    padding: 22px 40px;
+    @include font-20;
+    font-weight: 500;
+    box-sizing: border-box;
     @include sm {
-        margin-top: 40px;
+        padding: 15px 30px;
     }
+    &:hover {
+        border: 1.5px solid $primary;
+        box-shadow: 1px 0px 10px 0px #15B887;
+    }
+
 }
 
-.counter-item{
-    h3{
-        font-family: 'Inter', sans-serif;
+
+.inline__btn{
+    @include font-16;
+    padding: 16px 40px;
+    border: 1.5px solid $primary;
+    box-shadow: 1px 0px 10px 0px $primary;
+    background: transparent;
+    &:hover{
+        background: $_0F1919;
+        backdrop-filter: blur(27px);
+        border: 1.5px solid $_212B3A;
+        box-shadow: 1px 0px 10px 0px $_212B3A;
+    }
+}
+.section__title{
+    & h2{
+        margin-bottom: 20px;
+    }
+    & p{
+        @include font-25;
+        opacity: 0.78;
+        font-weight: 400;
     }
 }
