--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,9 +1,7 @@
-$black:#000;
-$white:#fff;
-$t-black:#050505;
-$bg-black:#16171C;
-$primary:#FACD35;
-$text:#C0C0BF;
-$heading:#FEFEFE;
-$theme-colors: ( "primary": $primary, );
-$grid-gutter-width: 30px;
+$_black:#000;
+$_white:#fff;
+$_0F1919: #0F1919;
+$_141C24: #141C24;
+$_212B3A: #212B3A;
+$_color_0_70: rgba(255, 255, 255, 0.70);
+$primary: #15B887
