--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -1,5 +1,5 @@
 .heading {
-    padding: 30px 0;
+    padding: 26px 0;
     position: absolute;
     top: 0;
     left: 0;
@@ -14,7 +14,7 @@
             padding: 6px;
         }
         .navbar-collapse {
-            background: $bg-black;
+            background: $_141C24;
             padding: 25px;
             & .navbar-nav {
                 & a {
@@ -36,14 +36,18 @@
             }
         }
     }
+    & .container{
+        max-width: 1600px;
+    }
 }
 
 .navbar-nav {
     & a {
         display: block;
-        color: $text;
-        font-size: 18px;
-        padding:5px 20px;
+        color: $_white;
+        opacity: 0.7;
+        @include font-16;
+        padding:16px 20px;
         cursor: pointer;
         &:hover,
         &.active,
@@ -51,16 +55,26 @@
             color: $primary !important;
         }
     }
-    & .base-btn{
+    & .boxed__btn{
+        padding: 16px 40px;
+        border-radius: 40px;
+        border: 1.5px solid $_212B3A;
+        display: inline-block;
+        @include font-16;
+        font-weight: 500;
+        margin-left: 16px;
+        opacity: 1;
         &:hover{
-            color: #050505 !important;
+            border: 1.5px solid $primary;
+            box-shadow: 1px 0px 10px 0px $primary;
+            color: $_white !important;
         }
     }
 }
 
 .heading.fixed{
     position: fixed;
-    background-color: $bg-black;
-    padding: 5px 0;
+    background-color: $_141C24;
+    padding: 10px 0;
     transition: all .3s ease-in-out;
 }
