--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -5,21 +5,21 @@
 
 @mixin font-120 {
     font-size: 120px;
-    line-height: 1.2;
+    line-height: 120%;
     @include xxl {
-        font-size: 80px;
+        font-size: 100px;
     }
     @include xl {
-        font-size: 70px;
+        font-size: 90px;
     }
     @include lg {
-        font-size: 60px;
+        font-size: 80px;
     }
     @include md {
-        font-size: 56px;
+        font-size: 70px;
     }
     @include sm {
-        font-size: 40px;
+        font-size: 60px;
     }
 }
 
