--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -348,6 +348,7 @@
 /* snipe__area CSS */
 .snipe__area{
     padding-top: 88px;
+    padding-bottom: 70px;
     & .section__title{
         max-width: 746px;
         margin: 0 auto 55px;
@@ -360,6 +361,7 @@
         margin-bottom: 30px;
         @include sm{
             padding-top: 30px;
+            border-radius: 15px;
         }
         & h3{
             margin-bottom: 25px;
@@ -381,3 +383,70 @@
 }
 
 /* snipe__area CSS */
+
+
+
+/* industrylux__area CSS */
+.industrylux__area{
+    position: relative;
+    z-index: 1;
+    padding-top: 140px;
+    padding-bottom: 140px;
+    background-image: url('../img/industry_us_bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: cover;
+    & .industrylux__wrapper{
+        & .section__title{
+            margin-bottom: 190px;
+            @include lg{
+                margin-bottom: 70px;
+            }
+            @include mmd{
+                margin-bottom: 70px;
+            }
+        }
+        & .single__industrylux__item{
+            display: flex;
+            align-items: center;
+            gap: 40px;
+            margin-bottom: 37px;
+            @include font-30;
+            @include sm{
+                display: block;
+            }
+            & .btn {
+                border-radius: 10px;
+                background: $primary;
+                display: inline-block;
+                min-width: 296px;
+                padding: 12px;
+                color: $_white;
+                @include transition;
+                @include font-30;
+                @include sm{
+                    margin-bottom: 15px;
+                    min-width: 230px;
+                }
+                &:hover{
+                    background:$_212B3A;
+                    color: $primary;
+                }
+            }
+        }
+        & .industrylux_img{
+            width: 100%;
+            margin-bottom: 0;
+            margin-top: 30px;
+            margin-left: auto;
+            & img{
+               max-width: 360px;
+            }
+            @include mmd{
+                margin-left: 0;
+                text-align: left !important;
+            }
+            
+        }
+    }
+}
