--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,5 +1,4 @@
 /* Banner CSS */
-
 .banner {
     padding-top: 200px;
     padding-bottom: 260px;
@@ -103,6 +102,7 @@
         }
     }
 }
+/* Banner CSS */
 
 /* aplication__area CSS */
 .aplication__area{
@@ -189,8 +189,6 @@
         }
     }
 }
-
-
 /* aplication__area CSS */
 
 /* wallet__area CSS */
@@ -199,13 +197,12 @@
     padding-bottom: 65px;
     & .wallet_single_box{
         max-width: 580px;
-        border-radius: 42px;
+        @include border__radius__42;
         border-top: 1px solid rgba(0, 0, 0, 0.20);
         border-bottom: 3px solid rgba(0, 0, 0, 0.20);
         background: $_212B3A;
         padding: 26px 50px 31px;
         @include mmd{
-            border-radius: 15px;
             padding: 30px 30px 30px;
         }
         & h3{
@@ -245,9 +242,7 @@
         margin-bottom: 78px;
     }
 }
-
 /* aplication__area CSS */
-
 
 /* trade__area CSS */
 .trade__area{
@@ -262,7 +257,7 @@
         gap: 30px;
         flex-wrap: wrap;
         & .single__trade__item {
-            border-radius: 42px;
+            @include border__radius__42;
             background: #212B3A;
             padding: 44px 50px 80px;
             width: calc(50% - 30px);
@@ -288,7 +283,6 @@
                 flex-direction: column-reverse;
                 gap: 30px;
                 padding: 30px 30px 30px;
-                border-radius: 15px;
             }
             & .trade__Img {
                 text-align: center;
@@ -344,7 +338,6 @@
 }
 /* trade__area CSS */
 
-
 /* snipe__area CSS */
 .snipe__area{
     padding-top: 88px;
@@ -354,14 +347,13 @@
         margin: 0 auto 55px;
     }
     & .single__snipe__item{
-        border-radius: 42px;
+        @include border__radius__42;
         background: $_212B3A;
         padding:70px 35px 30px;
         height: 100%;
         margin-bottom: 30px;
         @include sm{
             padding-top: 30px;
-            border-radius: 15px;
         }
         & h3{
             margin-bottom: 25px;
@@ -381,10 +373,7 @@
         }
     }
 }
-
 /* snipe__area CSS */
-
-
 
 /* industrylux__area CSS */
 .industrylux__area{
@@ -450,3 +439,75 @@
         }
     }
 }
+/* industrylux__area CSS */
+
+
+/* comunity__area CSS */
+.comunity__area{
+    padding-top: 95px;
+    padding-bottom: 95px;
+    & .section__title{
+        margin-bottom: 95px;
+    }
+    & .single__comunity__item{
+        @include border__radius__42;
+        background: $_212B3A;
+        padding: 50px 46px 37px;
+        display: flex;
+        align-items: center;
+        gap: 30px;
+        margin-bottom: 30px;
+        @include sm{
+            flex-direction: column-reverse;
+            align-items: start;
+            padding: 30px;
+            gap: 15px;
+        }
+        & .comunity__Img{
+            width: 131.724px;
+            height: 131.724px;
+            background-color: #074052;
+            padding: 31px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+            border:1px solid $primary;
+            @include sm{
+                width: 100px;
+                height: 100px;
+                padding: 20px;
+
+            }
+        }
+        & .comunity__content{
+            & span{
+                color: $primary;
+                text-transform: uppercase;
+                @include font-16;
+                letter-spacing: 2.4px;
+                margin-bottom: 12px;
+                display: inline-block;
+            }
+            & h3{
+                margin-bottom: 25px;
+            }
+            & p{
+                color: $_color_0_70;
+                @include font-18;
+                text-transform: capitalize;
+                margin-bottom: 23px;
+                @include sm{
+                    margin-bottom: 10px;
+                }
+            }
+            & .inline__btn{
+                margin-right: 26px;
+                margin-top: 25px;
+            }
+        }
+        
+
+    }
+}
+/* comunity__area CSS */
