--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -47,6 +47,10 @@
         & .boxed__btn {
           margin-right: 20px;
           margin-bottom: 20px;
+          @include sm{
+            margin-right: 15px;
+            margin-bottom: 15px;
+          }
         }
     }
     & .banner-img{
@@ -107,6 +111,9 @@
 /* aplication__area CSS */
 .aplication__area{
     padding-top: 80px;
+    @include sm{
+        padding-top: 60px;
+    }
    & .aplication__box{
         position: relative;
         padding-top: 30px;
@@ -185,7 +192,7 @@
     & .section__title{
         margin-bottom: 200px;
         @include sm{
-            margin-bottom: 30px;
+            margin-bottom: 50px;
         }
     }
 }
@@ -194,7 +201,12 @@
 /* wallet__area CSS */
 .wallet__area{
     padding-top: 130px;
-    padding-bottom: 65px;
+    padding-bottom: 65px;   
+    @include sm{
+        padding-top: 35px;
+        padding-bottom: 35px;
+    }
+    
     & .wallet_single_box{
         max-width: 580px;
         @include border__radius__42;
@@ -218,6 +230,7 @@
         }
     }
     & .w_i{
+        margin-bottom: 0;
         @include xxxl{
             margin-left: 10%;
             margin-right: -10%;
@@ -233,13 +246,16 @@
             margin-top: 30px;
             max-width: 500px;
         }
-        @include mmd{
-            margin-top: 30px;
+        @include sm{
+            margin-top: 70px;
             max-width: 400px;
         }
     }
     & .section__title{
         margin-bottom: 78px;
+        @include sm{
+            margin-bottom: 45px;
+        }
     }
 }
 /* aplication__area CSS */
@@ -248,6 +264,11 @@
 .trade__area{
     padding-top: 50px;
     padding-bottom: 88px;
+    
+    @include sm{
+        padding-top: 35px;
+        padding-bottom: 35px;
+    }
     & .section__title{
         max-width: 790px;
         margin: 0 auto 50px;
@@ -342,6 +363,10 @@
 .snipe__area{
     padding-top: 88px;
     padding-bottom: 70px;
+    
+    @include sm{
+        padding-top: 35px;
+    }
     & .section__title{
         max-width: 746px;
         margin: 0 auto 55px;
@@ -385,6 +410,10 @@
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
+    @include sm{
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
     & .industrylux__wrapper{
         & .section__title{
             margin-bottom: 190px;
@@ -446,8 +475,15 @@
 .comunity__area{
     padding-top: 95px;
     padding-bottom: 95px;
+    @include sm{
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
     & .section__title{
         margin-bottom: 95px;
+        @include sm{
+            margin-bottom: 45px;
+        }
     }
     & .single__comunity__item{
         height: 100%;
@@ -457,7 +493,6 @@
         display: flex;
         align-items: center;
         gap: 30px;
-        margin-bottom: 30px;
         @include sm{
             flex-direction: column-reverse;
             align-items: start;
@@ -505,6 +540,10 @@
             & .inline__btn{
                 margin-right: 26px;
                 margin-top: 25px;
+                @include sm{
+                    margin-right: 15px;
+                    padding:15px 30px;
+                }
             }
         }
         
@@ -512,3 +551,57 @@
     }
 }
 /* comunity__area CSS */
+
+/* Faq__area CSS */
+.faq__area{
+    padding-top: 90px;
+    & .section__title{
+        margin-bottom: 70px;
+    }
+    & .accordion-item {
+        margin-bottom: 15px;
+        border-radius: 15px !important;
+        background: $_212B3A;
+        border: 0;
+        padding:28px 40px;
+        & .accordion-button{
+            padding-bottom: 0;
+            padding-top: 0px;
+            background: #212B3A;
+            @include font-22;
+            color: $_white;
+            text-transform: capitalize;
+
+        }
+        & .accordion-body{
+            color: $_white;
+            opacity: 0.78;
+            @include font-16;
+            line-height: 170%;
+            padding-bottom: 0;
+            max-width: 82%;
+        }
+    }
+    & .accordion{
+        --bs-accordion-border-color: transparent;
+        --bs-accordion-btn-focus-border-color: transparent;
+        --bs-accordion-btn-focus-box-shadow: 0 0 0 0rem transparent;
+        --bs-accordion-inner-border-radius: 10px - 10px;
+    }
+    .accordion-button:not(.collapsed)::after {
+        background-image: url('../img/angle_up.svg');
+        rotate: 0deg;
+        @include transition;
+        transform: translateY(5px);
+
+    }
+
+    .accordion-button::after {
+        background-image: url('../img/angle_down.svg');
+        @include transition;
+    }
+}
+
+/* Faq__area CSS */
+
+
