--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -76,6 +76,20 @@
 }
 
 
+@mixin font-27 {
+    font-size: 27px;
+    line-height: 160%;
+    @include lg {
+        font-size: 25px;
+    }
+    @include md {
+        font-size: 23px;
+    }
+    @include sm {
+        font-size: 20px;
+    }
+}
+
 @mixin font-25 {
     font-size: 25px;
     line-height: 160%;
