--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,6 +1,6 @@
 /* Banner CSS */
 .banner {
-    padding-top: 200px;
+    padding-top: 225px;
     padding-bottom: 260px;
     position: relative;
     z-index: 1;
@@ -13,15 +13,16 @@
     &::before {
         position: absolute;
         content: "";
-        left: 10%;
+        left: 15%;
         top: 50%;
-        width: 832.123px;
-        height: 149.692px;
-        border-radius: 832.123px;
+        width: 700.123px;
+        height: 140.692px;
+        flex-shrink: 0;
+        border-radius: 700.123px;
         background:#15B887;
-        filter: blur(200px);
+        filter: blur(170px);
         z-index: 1;
-        transform: translateY(-50%);
+        transform: translateY(-40%);
         
         @include mmd{
             top: 20%;
@@ -31,7 +32,19 @@
         z-index: 9;
         position: relative;
         & span {
-            border-bottom: 8px solid $primary; 
+            position: relative;
+            z-index: 1;
+            &::before{
+                position: absolute;
+                content: "";
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                height: 8px;
+                border-radius: 50px;
+                background: $primary;
+                z-index: -1;
+            }
         }
         & h1 {
             @include font-120;
@@ -42,22 +55,30 @@
             }
         }
         & p {
-            margin-bottom: 40px;
+            margin-bottom: 50px;
+            @include font-30;
+            opacity: 0.8;
         }
         & .boxed__btn {
           margin-right: 20px;
           margin-bottom: 20px;
+          min-width: 232px;
+          text-align: center;
           @include sm{
             margin-right: 15px;
             margin-bottom: 15px;
+            min-width: 180px;
           }
+        }
+        @include lg{
+            width: 95%;
         }
     }
     & .banner-img{
         position: absolute;
         top: 50%;
         right: 0;
-        transform: translateY(-50%);
+        transform: translateY(-45%);
         z-index: -1;
         width: 50%;
         @include mmd{
@@ -82,7 +103,7 @@
     & figure.banner__shap1 {
         position: absolute;
         left: 0;
-        bottom: 60px;
+        bottom: 70px;
         max-width: 314px;
         z-index: -1;
         @include sm{
@@ -93,7 +114,7 @@
     & figure.banner__shap2 {
         position: absolute;
         left: 50%;
-        bottom: 0;
+        bottom: -30px;
         transform: translateX(150px);
         max-width: 150px;
         z-index: -1;
@@ -110,7 +131,7 @@
 
 /* aplication__area CSS */
 .aplication__area{
-    padding-top: 80px;
+    padding-top: 127px;
     @include sm{
         padding-top: 60px;
     }
@@ -130,8 +151,8 @@
         }
         & .aplication__shap{
             position: absolute;
-            right: 3%;
-            bottom: 0;
+            right: 2%;
+            bottom: -8%;
             max-width: 314px;
             z-index: 0;
             @include mmd{
@@ -187,6 +208,9 @@
                 transform: scaleX(-1);
             }
         }
+        & .space-evenly{
+            justify-content: space-evenly;
+        }
         
     }
     & .section__title{
@@ -218,7 +242,7 @@
             padding: 30px 30px 30px;
         }
         & h3{
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         & p{
            color: $_color_0_70;
@@ -226,13 +250,18 @@
            text-transform: capitalize;
         }
         & .inline__btn{
-            margin-top: 43px;
+            margin-top: 50px;
+            min-width: 186px;
+            text-align: center;
+            @include sm{
+                min-width: 150px;
+            }
         }
     }
     & .w_i{
         margin-bottom: 0;
         @include xxxl{
-            margin-left: 10%;
+            margin-left: 1%;
             margin-right: -10%;
         }
        
@@ -271,7 +300,7 @@
     }
     & .section__title{
         max-width: 790px;
-        margin: 0 auto 50px;
+        margin: 0 auto 60px;
     }
     & .trade__wrapper {
         display: flex;
@@ -361,7 +390,7 @@
 
 /* snipe__area CSS */
 .snipe__area{
-    padding-top: 88px;
+    padding-top: 100px;
     padding-bottom: 70px;
     
     @include sm{
@@ -369,7 +398,7 @@
     }
     & .section__title{
         max-width: 746px;
-        margin: 0 auto 55px;
+        margin: 0 auto 59px;
     }
     & .single__snipe__item{
         @include border__radius__42;
@@ -398,6 +427,14 @@
         }
     }
 }
+.snipe__wrapper .col-lg-4:nth-child(2) .single__snipe__item {
+    padding-left: 54px;
+    padding-right: 54px;
+}
+.snipe__wrapper .col-lg-4:last-child .single__snipe__item {
+    padding-left: 30px;
+    padding-right: 30px;
+}
 /* snipe__area CSS */
 
 /* industrylux__area CSS */
@@ -422,6 +459,9 @@
             }
             @include mmd{
                 margin-bottom: 70px;
+            }
+            & p{
+                @include font-27;
             }
         }
         & .single__industrylux__item{
@@ -489,9 +529,9 @@
         height: 100%;
         @include border__radius__42;
         background: $_212B3A;
-        padding: 50px 46px 37px;
+        padding: 46px 46px 51px;
         display: flex;
-        align-items: center;
+        align-items: start;
         gap: 30px;
         @include sm{
             flex-direction: column-reverse;
@@ -538,15 +578,26 @@
                 }
             }
             & .inline__btn{
-                margin-right: 26px;
+                margin-right: 20px;
                 margin-top: 25px;
+                min-width: 186px;
+                text-align: center;
                 @include sm{
                     margin-right: 15px;
                     padding:15px 30px;
+                    min-width: 130px;
                 }
+                
+            }
+            & .inline__btn:last-child{
+                margin-right: 0;
             }
         }
-        
+        & .comunity__right_box {
+            height: 100%;
+            align-items: center;
+            display: flex;
+        }
 
     }
 }
@@ -577,9 +628,11 @@
             border-radius: 10px !important;
         }
         & .accordion-button{
+            font-family: 'Satoshi-Regular';
+            font-weight: 400;
             padding-bottom: 0;
             padding-top: 0px;
-            background: #212B3A;
+            background: $_212B3A !important;
             @include font-22;
             color: $_white;
             text-transform: capitalize;
