--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -13,6 +13,9 @@
         @include lg{
             min-width: 150px;
         }
+        @include sm{
+            min-width: 150px;
+        }
     }
     @include mmd {
         .navbar-toggler {
