--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -585,7 +585,7 @@
                 @include sm{
                     margin-right: 15px;
                     padding:15px 30px;
-                    min-width: 130px;
+                    min-width: 160px;
                 }
                 
             }
@@ -600,6 +600,11 @@
         }
 
     }
+}
+.comunity__area .single__comunity__item .comunity__content .inline__btn img {
+    max-width: 70px;
+    margin-right: 10px;
+    margin-top: -4px;
 }
 /* comunity__area CSS */
 
