--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -259,6 +259,8 @@
         }
     }
     & .w_i{
+        position: relative;
+        z-index: 1;
         margin-bottom: 0;
         @include xxxl{
             margin-left: 1%;
@@ -289,6 +291,13 @@
             margin-bottom: 45px;
         }
     }
+}
+.eip {
+    position: absolute;
+    width: max-content;
+    left: 50%;
+    top: 50%;
+    margin-left: -30px;
 }
 /* aplication__area CSS */
 
@@ -694,7 +703,25 @@ button.accordion-button {
     height: 466px;
     transform: translate(-47%, -48%);
 }
-
+@media(max-width:1200px) and (min-width:992px){
+    .all_click_icons {
+        transform: translate(-50%, -50%);
+    }
+}
+@media(max-width:992px) and (min-width:768px){
+    .all_click_icons {
+        width: 400px;
+        height: 400px;
+        transform: translate(-50%, -50%);
+    }
+}
+@media(max-width:767px){
+    .all_click_icons {
+        width: 360px;
+        height: 360px;
+        transform: translate(-50%, -50%);
+    }
+}
 figure.w_i {
     position: relative;
 }
