--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -699,9 +699,9 @@ button.accordion-button {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 466px;
-    height: 466px;
-    transform: translate(-47%, -48%);
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%) scale(.71) ;
 }
 @media(max-width:1200px) and (min-width:992px){
     .all_click_icons {
